# TIC

./: .gitignore  README.md
Noodles/: README_whisper.md  chat_server.py  llm_server.py  patient_app.py  redis_cache.py  requirements_streamlit.txt  requirements_whisper.txt  setup_cuda.py  start_whisper.py  (+6 more)
anugrah/doctor_assistant/: BACKEND_INTEGRATION.md  README.md  REALTIME_INSIGHTS.md  debug_mcp_response.py  graph.py  logging_config.py  main.py  project_plan.md  pyproject.toml  quick_mcp_test.py  requirements.txt  state.py  test_backend_connector.py  test_complete_workflow.py  test_data_transform.py  test_diagnosis_debug.py  test_enhanced_diagnosis.py  test_enhanced_shap.py  test_error_fix.py  test_fixed_diagnosis.py  test_frontend_simulation.py  test_integration.py  test_llm_fallback.py  test_real_mcp_success.py  test_real_shap.py  test_realtime_insights.py  test_shap_highlighting.py  test_shap_simple.py  test_streaming.py  test_workflow_complete.py
anugrah/doctor_assistant/agents/: diagnosis_agent.py  intent_agent.py  main_agent.py  prediction_agent.py
anugrah/doctor_assistant/config/: parameters.txt
anugrah/doctor_assistant/connectors/: backend_connector.py  llm_connector.py  mcp_connector.py
anugrah/doctor_assistant/doctor_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
anugrah/doctor_assistant/frontend/: app.py
anugrah/doctor_assistant/tests/: test_backend_connector.py  test_diagnosis_agent_mcp.py  test_llm_connector.py  test_parameter_tool.py
anugrah/doctor_assistant/tools/: backend_tool.py  mcp_tool.py  parameter_tool.py
(+11 files in other folders)
